Version 12     ???

--Fixed decimal precision formatting glitch on post-game result screen when
  starting balance has only two decimals.

--Fixed possible freeze when dragging pickers (thanks Benjamin Y).

--Fixed column pickers bouncing back and forth at low target framerates
  (thanks Zed).

--Fixed crash when halfFrameRate would push frame rate to 0.





Version 11     Live Server Fixes

--Setting for a house table rake (coins taken from each player at the start of
  a table).  To support tournament mode.

--Support for time limited, single-stake tournament embedded in main game.

--Improved formulas used on leaderboards.

--Added Elo ratings.

--Fixed leaderboards to hide effects of live games (so you can't check who
  you're playing against by watching changes in leaderboard numbers).

--Improved security by passing Yubikey through a regexp and not logging failed
  admin passwords (thanks Cayce U).

--Fixed to pass user-submitted credit card data through a regexp to prevent
  exec injection attacks.  Card data was validated as being properly encrypted,
  but after decryption, it was trusted blindly (thanks Cayce U).

--Logs are now flushed after 30 days to save database space.

--Added an Elo rating floor of 1, and moved starting point to 1.




Version 11     2014-December-16

--Fixed so that you can't click on an opponent's possible square after the game
  board starts fading out post-opponent-fold.  Before, the locked square
  arrows would linger after the fade (thanks Nathan C).

--You can now mouse over your own won squares, after all your squares are set
  but pre-reveal, to preview how revealing a given square will affect the score
  graph (thanks MZO).

--Changed behavior post-disconnect when the game has timed out out from
  underneath a player (now displays a GAME TIMED OUT message instead of
  DENIED BY SERVER).

--Changed score graph to hold off on updating when opponent's move is received